--- a/client/public/assets/css/custom.css
+++ b/client/public/assets/css/custom.css
@@ -209,7 +209,7 @@
         background-color:#6988C6;
         color:#fff;
         font-weight:bold;
-        bolder-radius:3px;
+       
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
     
@@ -280,19 +280,30 @@
         .content-aside{
             display:flex;
             flex-direction:column;
-            
+            background:#fff;
             border-radius:3px;
         }
         .aside-left{
             width:100%;
-           
+            display:flex;
+            flex-direction:column;
             height:200px;
             border-top-left-radius:3px;
         }
         .aside-right{
             width:100%;
-            height:200px;
-            
+            height:200px;  
+        }
+        .aside-left-item{
+            padding:10px;
+           
+            border-bottom:1px solid #DBDFEA;
+        }
+        .user-image-circle{
+            width:100px;
+            height:100px;
+            border-radius:50%;
+   
         }
     /* End Content side */
 
