--- a/client/public/assets/css/custom.css
+++ b/client/public/assets/css/custom.css
@@ -4,8 +4,34 @@
    
   }
   body{
-      background-color: rgba(230, 244, 247, 0.8);
+      background-color: #E7DEDE;
   }
+  .heading2{
+      font-size:24px;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 28px;
+      color:#16227b;
+  }
+  .heading3{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.07em;
+    color: #94ADCE;
+}
+.subheading3{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.07em;
+    color: #3F3939;
+}
   .activetext{
       color:#6071CB;
   }
@@ -114,13 +140,13 @@
         
         display:flex;
         width:100%;
-        background-color:#5976AF;
+      
         color: #979CAE;
         font-weight:bold;
         padding-top:5px;
         padding-bottom:5px;
         padding-left:20px;
-        background-color:#E6E2E2;
+        
         margin:10px 0;
         border-radius:3px;
     }
@@ -287,23 +313,70 @@
             width:100%;
             display:flex;
             flex-direction:column;
-            height:200px;
             border-top-left-radius:3px;
         }
         .aside-right{
             width:100%;
-            height:200px;  
+            margin-bottom:50px;  
+            
         }
-        .aside-left-item{
-            padding:10px;
-           
+        .aside-column-item{
+            padding:30px 0px;
+            padding-left:20px;
             border-bottom:1px solid #DBDFEA;
         }
         .user-image-circle{
             width:100px;
             height:100px;
             border-radius:50%;
-   
+           
+            overflow: hidden;
+        }
+        .user-image-circle img{
+           width:100px;
+           height:100px;
+            object-fit: cover;
+        }
+        .profile-name{
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 28px;
+            color:#16327B;
+        }
+        .profile-email{
+            font-style: normal;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            color:#827F7F;
+        }
+        
+        
+        
+
+        .option-profile:hover span{
+            color:#6071CB !important;
+        }
+        .heading-title-profile{
+            width:100%;
+            padding: 10px 20px;
+            border-radius: 3px;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 16px;
+            letter-spacing: 0.155em;
+            color:#fff;
+            background-color: #5976AF;
+        }
+        .form-item-profile{
+            border-bottom: 1px solid #DBDFEA;
+            padding:10px 20px;
+            
+            
+            display:flex;
+            align-items: center;
         }
     /* End Content side */
 
@@ -401,16 +474,18 @@
         height:100%;
         background-color:#fff;
         border-radius:3px;
+      
     }
     .aside-left{
         width:400px;
         height:100%;
         border-right:1px solid #DBDFEA;
+        overflow:auto
     }
     .aside-right{
         width:100%;
         height:100%;
-     
+        overflow:auto;
     }
 
     /* End Component Content */
