--- a/client/public/assets/css/customUI.css
+++ b/client/public/assets/css/customUI.css
@@ -4,3 +4,87 @@
 .input-login:focus{
     border-color:#793479;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+.form-control{
+    font-weight: 500;
+}
+.form-control:focus{
+    border-color: #0e49b5;
+}
+.checkbox-switch:checked + .switch-btn{
+    background-color: #2B4B9B;
+
+}
+
+.checkbox-switch:checked + .switch-btn::after{
+    margin-left:20px;
+}
+.switch-btn{
+    width:40px;
+    max-width: 40px;
+    height:20px;
+    border-radius: 30px;
+    background-color: #A5A5A5;
+    padding:5px;
+    transition: all 300ms ease-in-out;
+    position: relative;
+}
+.switch-btn::after{
+    content:'';
+    width:10px;
+    height:10px;
+    background-color:#fff;
+    border-radius: 50%;
+    position: absolute;
+    transition: all 300ms ease-in-out;
+ 
+}
+
+.btn-primary{
+    background-color:#2B4B9B;
+    color:#fff;
+    outline:hidden;
+    border: hidden;
+}
+@media (min-width: 1199.98px) { 
+    .switch-btn{
+        width:40px;
+        height:20px;
+        border-radius: 30px;
+        background-color: #A5A5A5;
+        padding:5px;
+        transition: all 300ms ease-in-out;
+        position: relative;
+        transition: all 300ms ease-in-out;
+    }
+    .switch-btn::after{
+        content:'';
+        width:10px;
+        height:10px;
+        background-color:#fff;
+        border-radius: 50%;
+        position: absolute;
+      
+        transition: all 300ms ease-in-out;
+    }
+    .checkbox-switch:checked + .switch-btn::after{
+        margin-left:20px;
+    }
+}
+/* .inner-circle{
+    width:20px;
+    height:20px;
+    background-color:#fff;
+    border-radius: 50%;
+    transition: all 300ms ease-in-out;
+} */
